Include the necessary packages for the current DB to run.

--- a/packages.cfg
+++ b/packages.cfg
@@ -29,6 +29,7 @@ main =
 addon =
     Products.PloneFormGen
     Products.Maps
+    Products.LinguaPlone
     collective.prettyphoto
     collective.quickupload
 
@@ -38,7 +39,7 @@ test =
 devtools =
     bpython
     plone.reload
-#    Products.PDBDebugMode
+    Products.PDBDebugMode
     Products.PrintingMailHost
     Products.DocFinderTab
  
