Add the old site theme into the src directory in order to provide a half way working buildout that should be able to migrate the current database

--- a/packages.cfg
+++ b/packages.cfg
@@ -24,7 +24,7 @@ unzip = true
 
 [eggs]
 main =
-
+    msc.sitetheme
 
 addon =
     Products.PloneFormGen
@@ -47,3 +47,4 @@ devtools =
 # Run ./bin/develop help for more information.
 
 [sources]
+msc.sitetheme       = fs msc.sitetheme
