Missing check ins: we need to include the performance boosting packages in the new buildout no matter if these are available as plone core packages by now

--- a/packages.cfg
+++ b/packages.cfg
@@ -32,6 +32,9 @@ addon =
     Products.LinguaPlone
     collective.prettyphoto
     collective.quickupload
+    collective.indexing
+    experimental.catalogqueryplan
+    experimental.contentcreation
 
 test =
     example.sitetheme [test]
@@ -39,7 +42,7 @@ test =
 devtools =
     bpython
     plone.reload
-    Products.PDBDebugMode
+#    Products.PDBDebugMode
     Products.PrintingMailHost
     Products.DocFinderTab
  
