Plone upgrade + hotfix

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,5 +2,6 @@
 # ============================================================
 
 [versions]
-
-ZopeSkel = 2.21.2
+zc.buildout             = 1.6.3
+DateTime                = 3.0.2
+ZopeSkel                = 2.21.2
