--- a/deployment.cfg
+++ b/deployment.cfg
@@ -14,6 +14,11 @@ extends =
     packages.cfg
     versions.cfg
 
+# Create local caches so we get self contained buildouts
+# Note: this directories must exist on the remote server
+eggs-directory  = /opt/buildout-cache/eggs
+download-cache  = /opt/buildout-cache/downloads
+extends-cache   = /opt/buildout-cache/extends
 
 # If you release internal eggs to an internal server, you should reference
 # a page that lists all those eggs here. Then use ./bin/mkrelease to
