--- a/packages.cfg
+++ b/packages.cfg
@@ -10,10 +10,7 @@ extensions =
 # The files can be downloaded from http://dist.plone.org/release/<version>/versions.cfg
 
 extends =
-    http://dist.plone.org/release/4.1.3/versions.cfg
-    http://good-py.appspot.com/release/dexterity/1.1
-    http://good-py.appspot.com/release/plone.app.theming/1.0b9
-    http://good-py.appspot.com/release/plone.app.z3cform/0.5.7
+    http://dist.plone.org/release/4.2.2/versions.cfg
     versions.cfg
 
 find-links =
@@ -35,6 +32,7 @@ addon =
     collective.indexing
     experimental.catalogqueryplan
     experimental.contentcreation
+    Products.PloneHotfix20121106
 
 test =
     example.sitetheme [test]
