add update befor moving to a new location

--- a/development.cfg
+++ b/development.cfg
@@ -4,6 +4,7 @@
 [buildout]
 parts =
     ${buildout:lxml-parts}
+    ${buildout:fabric-parts}
     instance-debug
     omelette
     zopepy
@@ -12,16 +13,20 @@ parts =
     checkversions
     i18nduder
     mkrelease
+    codeintel
 
 extends =
     buildout.d/lxml.cfg
+    buildout.d/fabric.cfg
     packages.cfg
     
 
 auto-checkout =
     msc.sitetheme
+    ade25.fabfiles
 
 always-checkout = force
+update-versions-file = known-good-versions.cfg
 
 # Override Zope instance settings to add custom packages managed by mr.developer
 
@@ -31,12 +36,25 @@ http-address = 8499
 user = zope-admin:admin
 verbode-security = on
 eggs =
-    Pillow
     ${eggs:main}
     ${eggs:addon}
     ${eggs:devtools}
 environment-vars =
     zope_i18n_compile_mo_files true
+zope-conf-additional =
+    %import sauna.reload
+
+# Generate a standard Plone site upon first buildout run
+# TODO: Change the site-id to the appropriate value
+
+[plone-site]
+recipe = collective.recipe.plonesite
+site-id = apc
+admin-user = zope-admin
+instance = instance-debug
+default-language = de
+profiles-initial =
+    Products.CMFPlone:plone-content
 
 
 [test]
@@ -81,6 +99,16 @@ eggs =
     ZopeSkel
     zopeskel.dexterity
 
+[templer]
+recipe = zc.recipe.egg
+eggs =
+   PasteScript
+   templer.core
+   templer.zope
+   templer.plone
+   templer.dexterity
+   ${instance:eggs}
+
 [checkversions]
 recipe = zc.recipe.egg
 eggs = z3c.checkversions [buildout]
@@ -97,3 +125,7 @@ eggs = ${eggs:main}
 [mkrelease]
 recipe = zc.recipe.egg
 eggs = jarn.mkrelease
+
+[codeintel]
+recipe = corneti.recipes.codeintel
+eggs = ${instance-debug:eggs}
