--- a/packages.cfg
+++ b/packages.cfg
@@ -1,29 +1,25 @@
-# Known Good Versions Set
-# =======================
-
 [buildout]
-extensions =
+extensions = 
     mr.developer
-    buildout.dumppickedversions
 
-# Extend a versions configuration to get the right version of Plone.
-# The files can be downloaded from http://dist.plone.org/release/<version>/versions.cfg
+show-picked-versions = true
 
-extends =
-    http://dist.plone.org/release/4.2.2/versions.cfg
+extends = 
+    http://dist.plone.org/release/4.3-latest/versions.cfg
     versions.cfg
 
-find-links =
-    http://dist.vorwaerts-werbung.de/public
+find-links = 
+    http://dist.kreativkombinat.de/public
 
 versions = versions
 unzip = true
 
 [eggs]
-main =
+main = 
     msc.sitetheme
 
-addon =
+addon = 
+    Pillow
     Products.PloneFormGen
     Products.Maps
     Products.LinguaPlone
@@ -32,20 +28,26 @@ addon =
     collective.indexing
     experimental.catalogqueryplan
     experimental.contentcreation
-    Products.PloneHotfix20121106
 
-test =
-    example.sitetheme [test]
+test = 
+    kk.apc [test]
 
-devtools =
+devtools = 
     bpython
     plone.reload
-#    Products.PDBDebugMode
+    sauna.reload
+    Products.PDBDebugMode
     Products.PrintingMailHost
     Products.DocFinderTab
- 
-# mr.developer - sources available for auto-checkout.
-# Run ./bin/develop help for more information.
 
 [sources]
-msc.sitetheme       = fs msc.sitetheme
+msc.sitetheme      = fs msc.sitetheme
+
+# Additional checkouts
+
+ade25.toolbar           = git git@github.com:ade25/ade25.toolbar.git
+ade25.typekit           = git git@github.com:ade25/ade25.typekit.git
+ade25.fabfiles          = git git@github.com:ade25/ade25.fabfiles.git
+plone.app.contenttypes  = git git@github.com:plone/plone.app.contenttypes.git
+sauna.reload            = git https://github.com/epeli/sauna.reload.git
+
