--- a/versions.cfg
+++ b/versions.cfg
@@ -2,6 +2,17 @@
 # ============================================================
 
 [versions]
-zc.buildout             = 1.6.3
-DateTime                = 3.0.2
-ZopeSkel                = 2.21.2
+zc.buildout                 = >= 2.2.1
+setuptools                  = >= 2.2
+plone.app.vocabularies      = >=2.1.12dev
+plone.dexterity             = >=2.2.1
+Pillow                      = 2.3.0
+buildout.sendpickedversions = 1.0-alpha.1 
+DateTime                    = 4.0
+ZopeSkel                    = 2.21.2
+plone.app.contenttypes      = 1.1b1
+plone.app.jquery            = 1.8.3
+plone.app.jquerytools       = 1.5.6
+plone.app.portlets          = 2.5a1
+plone.app.widgets           = 1.5.0
+plone.app.querystring       = 1.1.0
