--- a/deployment.cfg
+++ b/deployment.cfg
@@ -53,7 +53,7 @@ instance        = 8407
 
 [users]
 # Process owners for nginx, varnish, haproxy, memcached and Zope
-zope             = zope
+zope             = www
 main             = www
 
 # System user accounts for Zope root admin, database access and Supervisor
