add backup fixes

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -78,7 +78,7 @@ fallback = /system-error
 
 [sites]
 # Plone site ids - used in virtual hosting
-main = vsf
+main = msc
 
 
 # Zope instance template
@@ -120,8 +120,8 @@ update-command =
 
 [backup]
 recipe = collective.recipe.backup
-location = /opt/zope/backups/${sites:main}/backups
-snapshotbackup = /opt/zope/backups/${sites:main}/snapshotbackups
+location = /opt/backups/${sites:main}/backups
+snapshotbackup = /opt/backups/${sites:main}/snapshotbackups
 keep = 2
 full = false
 debug = true
