add backup fixes

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -8,6 +8,7 @@ parts =
     zopepy
     chown
     backup
+    repozo
 
 extends =
     buildout.d/lxml.cfg
@@ -125,6 +126,11 @@ snapshotbackup = /opt/backups/${sites:main}/snapshotbackups
 keep = 2
 full = false
 debug = true
+
+[repozo]
+recipe = zc.recipe.egg
+eggs = ZODB3
+scripts = repozo
 
 [keywords-patch]
 recipe = collective.recipe.patch
